fix: updateplane errors